fixed overflow

--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -1,6 +1,7 @@
 #wrapper {
     height: 100vh;
     width: 100vw;
+    position: relative;
 }
 
 #title-wrap {
