--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -1,10 +1,10 @@
 #home {
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 #home img {
